October 26, 2025
    About addon checks skip further checks if the first addon check fails.
    Emmote Updates to stats: 
        - Fixing "Golds Chests" typo.
        - Changing "PlayServer" to "Game Server".
        - Changing "Avg. Run Time" to "Average Run Time".
        - Making "Game Server" show "Unknown" if it's falling back to the default ps22.
    Added SharedTimers class.
    Updated Loopstring to be a property.
    Added Boss kill flag to prevent repeated boss kill attempts.
    Force update Q/E skip values on reset.
    Updated PredictStacks method.

October 24, 2025
    Updated stats to flex to larger fonts. (Emmote's edit)
    Refactored Game Object, again. - Memory Leaks fixed?
    Added memory read from LevelUp. 

October 23, 2025
    Removed NoCtlKeypress setting.
    Updated stop button to try and connect with already running gem farm if it exists and stop it
    Added Emmote teasing/honoring.
    Fixed getting stuck after 1 modron reset.
    Fixed the second memory leak that was caused by trying to address the first memory leak.

October 22, 2025
    Updated test for matching party when returning from closing IC so it doesn't hang on waiting for formation swap.
    Fixed various bugs and inefficiencies relating to Fort Restart (and Stack Restart in general).
    Updated offline time increment for failed stacking to only increment if no stacks were gained.
    Fixed another coms bug (stats).
    Fixed some restart and stacking issues caused by Tatyana being forced into the stack formation.
    Fixed some typos.
    Added IsCurrentFormationLazy to check for formations that aren't exact but match. (Missing champs)
    Refactored some code.
    Fixed some small bugs.
    Optimized reset a little by making the servercall use a timer to save.
    Fixed featswap not working due to a bad feat variable name.
    Fixed BPH/GPH getting stuck on 0 at times.
    Updated Memory Usage display on Stats.

October 21, 2025